# snarkVM

./: Cargo.toml
.integration/: Cargo.toml
.integration/tests/: dpc_testnet2.rs
algorithms/: Cargo.toml
bytecode/: Cargo.toml
bytecode/src/: lib.rs
bytecode/src/function/: input.rs  output.rs
bytecode/src/function/instructions/: add.rs  div.rs  equal.rs  mod.rs  mul.rs  (+2 more)
bytecode/src/helpers/: mod.rs
bytecode/src/instructions/: abs_checked.rs  abs_wrapped.rs  add.rs  add_checked.rs  add_wrapped.rs  and.rs  div.rs  div_checked.rs  div_wrapped.rs  double.rs  equal.rs  gt.rs  gte.rs  inv.rs  lt.rs  lte.rs  mod.rs  mul.rs  mul_checked.rs  mul_wrapped.rs  nand.rs  neg.rs  neq.rs  nor.rs  not.rs  or.rs  pow.rs  pow_checked.rs  pow_wrapped.rs  shl_checked.rs  shl_wrapped.rs  shr_checked.rs  shr_wrapped.rs  square.rs  sub.rs  sub_checked.rs  sub_wrapped.rs  ternary.rs  xor.rs
curves/: Cargo.toml
dpc/: Cargo.toml
eval/src/setup/: state.rs
eval/src/value/: char.rs  field.rs  value.rs
fields/: Cargo.toml
fields/src/: fp_384.rs
gadgets/src/bits/: boolean.rs  to_bits.rs  to_bytes.rs
gadgets/src/fields/: fp12.rs  fp2.rs  fp6_3over2.rs
gadgets/src/nonnative/: allocated_nonnative_field_var.rs
ir/: Cargo.toml
ir/proto/: ir.proto
ir/src/values/: field.rs  mod.rs
ir/tests/: program.rs
marlin/src/constraints/: ahp.rs
marlin/src/fiat_shamir/: fiat_shamir_algebraic_sponge_gadget.rs
marlin/src/marlin/: marlin.rs
polycommit/src/: constraints.rs
utilities/src/: bytes.rs
utilities/src/biginteger/: biginteger.rs  macros.rs
wasm/: Cargo.toml
(+32 files in other folders)
